crates/jsonschema-codegen/tests/ui/missing_schema_source.rs
#[jsonschema::validator(draft = referencing::Draft::Draft7)]
struct Validator;

fn main() {}
